# tpi-cgi

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini  main
include/display/: base_window.hpp
include/shaders/: shader.hpp
resources/: test.txt
resources/shaders/: vhs.fs  vhs.vs  vhst.fs
src/display/: game_window.cpp
src/shaders/: shader.cpp
