cmake_minimum_required(VERSION 3.5.0)
project(tpi-cg VERSION 0.1.0)
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")

link_directories(libs/glfw)

include_directories(libs/glad)
include_directories(libs/KHR)
include_directories(libs/imgui)
include_directories(libs/glfw)
include_directories(include)

file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_executable(main ${SOURCES})

find_package(OpenGL REQUIRED)
target_link_libraries(main PRIVATE ${OPENGL_gl_LIBRARY})
target_link_libraries(main PRIVATE glfw3)

file(COPY resources DESTINATION ${PROJECT_SOURCE_DIR}/)
